--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mavel-manager",
   "version": "0.1.0",
+  "author": "Phivh<phivhdev@gmail.com>",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.0.0",
@@ -11,6 +12,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "connected-react-router": "^6.4.0",
     "history": "^4.9.0",
     "marvel-api": "^1.1.0",
@@ -18,8 +20,10 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.8.8",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
