--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "eslint": "^5.16.0",
     "prettier": "^1.17.1"
   },
+  "scripts": {
+    "start": "webpack-dev-server",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "deploy": "gh-pages -d build"
+  },
   "dependencies": {
     "@material-ui/core": "^4.0.0",
     "axios": "^0.18.0",
@@ -21,7 +27,7 @@
     "connected-react-router": "^6.4.0",
     "gh-pages": "^2.0.1",
     "history": "^4.9.0",
-    "marvel-api": "^1.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
@@ -33,14 +39,10 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "reselect": "^4.0.0",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -57,5 +59,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage" : "https://phivh.github.io/onsolve"
+  "homepage": "https://phivh.github.io/onsolve"
 }
