--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "webpack": "^4.32.2",
+    "webpack": "4.29.6",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1"
   },
