--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "reselect": "^4.0.0",
     "webpack": "4.29.6",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1"
+    "webpack-dev-server": "3.2.1"
   },
   "eslintConfig": {
     "extends": "react-app"
