--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prettier": "^1.17.1"
   },
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "deploy": "gh-pages -d build"
