--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: node_js
-cache: npm
 node_js:
-- '10'
+  - stable
+
+install:
+  - npm install
+  
+scripts:
+  - npm test
 
 jobs:
   include:
